Update configuration files and add ESLint support for HTML files
- Add `eslint-plugin-html` to support linting of HTML files in ESLint configuration.
- Update `.prettierrc` to ensure consistent line endings.
- Modify `vitest.config.js` to exclude the `dist` directory from tests.
- Create `.eslintignore` to ignore `dist` and `node_modules` directories.
- Refactor test files for consistent quotation marks and formatting.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.14",
     "eslint": "^9.23.0",
+    "eslint-plugin-html": "^8.1.2",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
     "jsdoc": "^4.0.4",
