--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build && postcss dist/assets/*.css --use autoprefixer -d dist/assets/ && cp -R node_modules/bootstrap-icons/font/fonts dist/assets/fonts",
+    "build": "vite build && postcss dist/assets/*.css --use autoprefixer -d dist/assets/",
     "lint-staged": "npx lint-staged",
     "serve": "vite preview",
     "prepare": "husky install",
