--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^3.5.3",
     "sass": "^1.86.0",
     "vite": "^6.2.4",
+    "vite-plugin-static-copy": "^2.3.1",
     "vitest": "^3.1.1"
   },
   "lint-staged": {
