--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vitest": "^3.1.1"
   },
   "lint-staged": {
-    "*.js": "eslint --fix",
+    "*.js": "eslint --fix && eslint",
     "*.{js,css,md}": "prettier --write",
     "*.html": "prettier --write"
   },
