chore: format code for consistency and improve readability across multiple files

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint-staged": "npx lint-staged",
     "serve": "vite preview",
     "prepare": "husky install",
+    "format": "prettier --write .",
     "test": "vitest"
   },
   "dependencies": {
