--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "lint-staged": {
     "*.{js,mjs}": "eslint --fix && eslint",
-    "*.{js,mjs,css,md}": "prettier --write",
-    "*.html": "prettier --write"
+    "*.{js,mjs,css,md,html}": "prettier --write"
   },
   "scripts": {
     "start": "vite",
