--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.14",
     "cpx": "^1.5.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
     "jsdoc": "^4.0.4",
