feat: add jsdom dependency and configure testing environment
refactor: improve error handling in login function

fix: log API key in index file for debugging

delete: remove demo-todo-app tests

test: add unit tests for checkAuth function

test: add unit tests for login function with mocks

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "globals": "^16.0.0",
     "husky": "^8.0.0",
     "jsdoc": "^4.0.4",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "sass": "^1.86.0",
     "vite": "^6.2.4",
