--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
-    "postcss-cli": "^11.0.1"
+    "postcss-cli": "^11.0.1",
+    "vitest": "^3.1.1"
   }
 }
