--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev": "vite",
     "build": "vite build && postcss dist/assets/*.css --use autoprefixer -d dist/assets/",
     "lint-staged": "npx lint-staged",
+    "lint": "eslint . --fix",
     "serve": "vite preview",
     "prepare": "husky install",
     "format": "prettier --write .",
@@ -48,3 +49,4 @@
     "vitest": "^3.1.1"
   }
 }
+
